Moving Virtual Machine Setup to a different page

--- a/AzureSite/home.html
+++ b/AzureSite/home.html
@@ -34,7 +34,9 @@
                     <li class="active"><a href="home.html">Home</a></li>
                     <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown">Homework <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="homework1.html">Part 1: HTTP Sniffing</a></li>
+                            <li><a href="vmware.html">VMWare Player Setup</a></li>
+                            <li><a href="vbox.html">VirtualBox Setup</a></li>
+                            <li><a href="homework1.html">Part 1: Starbucks Hates You</a></li>
                             <li><a href="homework2.html">Part 2: Chrome Extension</a></li>
                             <li><a href="deliverables.html">Devliverables</a></li>
                         </ul>
