--- a/AzureSite/homework2.html
+++ b/AzureSite/homework2.html
@@ -35,7 +35,9 @@
                     <li><a href="home.html">Home</a></li>
                     <li class="active dropdown"><a class="dropdown-toggle" data-toggle="dropdown">Homework <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="homework1.html">Part 1: HTTP Sniffing</a></li>
+                            <li><a href="vmware.html">VMWare Player Setup</a></li>
+                            <li><a href="vbox.html">VirtualBox Setup</a></li>
+                            <li><a href="homework1.html">Part 1: Starbucks Hates You</a></li>
                             <li class="active"><a href="homework2.html">Part 2: Chrome Extension</a></li>
                             <li><a href="deliverables.html">Devliverables</a></li>
                         </ul>
@@ -87,6 +89,7 @@
             </p>
             <img src="images\dev-mode.png" width="80%"></img>
 
+            <br />
             <br />
             <br />
 
