editing Vbox and Home

--- a/AzureSite/home.html
+++ b/AzureSite/home.html
@@ -52,8 +52,16 @@
         <div class="starter-template">
             <h1>Home</h1>
             <p class="lead">
-                Test Home Content Test Home Content<br>
-                Test Home Content Test Home Content Test Home Content Test Home Content Test Home Content
+                <b>Team</b><br>
+		Brett Lesnau<br>
+		David Markachev<br>
+		Jason Leflar<br>
+		LT Thomas<br>
+
+		<b>Help and Questions</b><br>
+		cse825.mitm@gmail.com<br>
+
+                
             </p>
         </div>
     </div>
