--- a/AzureSite/vbox.html
+++ b/AzureSite/vbox.html
@@ -64,24 +64,23 @@
             <h4><b>Getting Started</b></h4>
             <ol>
                 <li>
-                    <p>Download and install <a href="https://my.vmware.com/web/vmware/free#desktop_end_user_computing/vmware_player/6_0">VMware Player</a></p>
+                    <p>Download and install <a href="https://www.virtualbox.org/wiki/Downloads">Virtual Box</a></p>
                 </li>
                 <li>
-                    <p>Download the image of <a href="http://images.offensive-security.com/kali-linux-1.0.6-vm-amd64.7z">Kali Linux</a></p>
+                    <p>Download the image of <a href="#">Kali Linux for Virtual Box</a></p>
                 </li>
             </ol>
             <p>
                 Kali Linux is a distribution of Linux that has a lot of security related software pre-installed so that you get certain applications like HTTP 
-                sniffers wihtout any extra installations. The download is about 2.5 GB and is about an additional 11 GB after being extracted because of the 
-                reserved space that the virtual machine requires, so make sure that you have enough space before starting. The image is in a .7z file so you 
-                will need <a href="http://www.7-zip.org/download.html">7-Zip</a> to extract it.
+                sniffers wihtout any extra installations. The download is about 3.5 GB and is about an additional 18 GB after being extracted because of the 
+                reserved space that the virtual machine requires, so make sure that you have enough space before starting. 
             </p>
             <ol start="3">
                 <li>
                     <p>Extract the Kali image</p>
                 </li>
                 <li>
-                    <p>Open the image in VMware Player</p>
+                    <p>Open the image in VirtualBox</p>
                 </li>
             </ol>
             <img src="images/mount-image.png" width="50%" />
