editing Home with List - ill stop

--- a/AzureSite/home.html
+++ b/AzureSite/home.html
@@ -53,14 +53,18 @@
             <h1>Home</h1>
             <p class="lead">
                 <b>Team</b><br>
-		Brett Lesnau<br>
-		David Markachev<br>
-		Jason Leflar<br>
-		LT Thomas<br>
+		<ul>
+		<li>Brett Lesnau
+		<li>David Markachev
+		<li>Jason Leflar
+		<li>LT Thomas
+		</ul>
+<br>
 
 		<b>Help and Questions</b><br>
-		cse825.mitm@gmail.com<br>
-
+		<ul>
+		<li>cse825.mitm@gmail.com
+		</ul>
                 
             </p>
         </div>
