Updated deliverables and contact page

--- a/AzureSite/contact.html
+++ b/AzureSite/contact.html
@@ -50,11 +50,25 @@
 
     <div class="container">
         <div class="starter-template">
-            <h1>Contact</h1>
-            <p class="lead">
-                Test Contact Content Test Contact Content<br>
-                Test Contact Content Test Contact Content Test Contact Content Test Contact Content Test Homework Content
+            <h2>Email: <a href="mailto:cse825.mitm@gmail.com">cse825.mitm@gmail.com</a></h2>
+            <h2>Phone: (586) 907-7991</h2>
+
+            <br/>
+            
+            <p>
+                We will answer emails as quickly as possible. Our goal is to answer any emails within 24-hours, but it will 
+                most likely never take that long to get a response. The phone number is Brett's and he will do his best to 
+                answer any calls if they are needed, but it will be more difficult to get an answer on the phone during 
+                normal business hours. We don't anticipate you needing to call us though. Emails should work fine.
             </p>
+            
+
+
+            <h2>Group Members:</h2>
+            <h3>LT Thomas</h3>
+            <h3>Brett Lesnau</h3>
+            <h3>Jason Lefler</h3>
+            <h3>David Markachev</h3>
         </div>
     </div>
     <!-- /.container -->
