--- a/AzureSite/deliverables.html
+++ b/AzureSite/deliverables.html
@@ -53,8 +53,13 @@
             <h2 style="text-decoration: underline">Homework Deliverables</h2>
             <br />
 
-            <h3><b>Part 1 Deliverables - HTTP Sniffing</b></h3>
-            <p>Turn all of this stuff in yo!</p>
+            <h3><b>Part 1 Deliverables - Becoming Dangerous at Starbuck's</b></h3>
+            <ul>
+                <li>Turn in a document with all of the requested answers from <a href="homework1.html">Part 1</a> including screenshots.</li>
+                <li>You can use <a href="files/Part1.docx">this document</a> as a starting point so that you know exactly which information you need to submit.</li>
+            </ul>
+            
+            <br/>
 
             <h3><b>Part 2 Deliverables - Chrome Extension</b></h3>
             <p>The extension should meet the following criteria</p>
@@ -69,6 +74,11 @@
                 <li>Place a screenshot of your extension popping up a message box containing the entered email and password into the folder for your extension.</li>
                 <li>Zip up your entire extension's folder and send it to us.</li>
             </ul>
+
+            <br/>
+            
+            <h3><b>How to Submit Your Files</b></h3>
+            <p>Send all deliverables to <a href="mailto:cse825.mitm@gmail.com">cse825.mitm@gmail.com</a>.</p>
         </div>
     </div>
     <!-- /.container -->
