--- a/AzureSite/homework2.html
+++ b/AzureSite/homework2.html
@@ -371,6 +371,7 @@ if ( div ) {
                 <ul>
                     <li>Place a screenshot of your extension popping up a message box containing the entered email and password into the folder for your extension.</li>
                     <li>Zip up your entire extension's folder and send it to us.</li>
+                    <li>Look <a href="deliverables.html">here</a> for information about everything you need to turn in and how you should submit it.</li>
                 </ul>
             </p>
         </div>
